--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -6,30 +8,50 @@
 body {
     height: 100vh;
     box-sizing: border-box;
-    background-color: black;
+    background-color: #000000;
     color: #F6F6F6;
 }
 
 .master {
+    margin: 10%;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+}
+
+.master__content {
+    width: 615px;
 }
 
 .master__title {
     font-family: 'Krona One', sans-serif;
-    font-style: normal;
     font-size: 36px;
-    line-height: 56px;
-    
 }
 
 .title__strong {
     color: #22D4FD;
 }
 
-.master__content {
+.master__text {
     font-weight: 'Montserrat', sans-serif;
-    font-style: normal;
     font-size: 24px;
-    line-height: 36px;
+    margin-top: 40px;
+}
+
+.master__links {
+    display: flex;
+    justify-content: space-between;
+}
+
+.master__links__button {
+    background-color: #22D4FD;
+    width: 280px;
+    padding: 21.5px 0;
+    text-align: center;
+    border-radius: 16px;
+    text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    color: #000000;
+    margin-top: 51px;
 }
