--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ body {
 
 .master__content {
     width: 615px;
+    display: flex;
+    gap: 40px;
+    flex-direction: column;
 }
 
 .master__title {
@@ -33,9 +36,9 @@ body {
 }
 
 .master__text {
-    font-weight: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 24px;
-    margin-top: 40px;
+    font-weight: 400;
 }
 
 .master__links {
@@ -53,5 +56,4 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     color: #000000;
-    margin-top: 51px;
 }
