--- a/style.css
+++ b/style.css
@@ -57,3 +57,17 @@ body {
     font-weight: 600;
     color: #000000;
 }
+
+footer {
+    width: 100%;
+    background-color: #22D4FD;
+}
+
+footer > p {
+    color: #000000;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    text-align: center;
+    padding: 24px 0;
+}
