--- a/style.css
+++ b/style.css
@@ -12,8 +12,21 @@ body {
     color: #F6F6F6;
 }
 
+.navagation {
+    margin: 5% 15% 0%;
+}
+
+.navagation > a {
+    color:#22D4FD;
+    text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 24px;
+    margin-right: 7%;
+}
+
 .master {
-    margin: 10%;
+    margin: 7% 15% 10%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -44,6 +57,13 @@ body {
 .master__links {
     display: flex;
     justify-content: space-between;
+    
+}
+
+.master__links__title {
+    font-family: 'Krona One', sans-serif;
+    font-size: 24px;
+    font-weight: 400;
 }
 
 .master__links__button {
