--- a/style.css
+++ b/style.css
@@ -57,7 +57,9 @@ body {
 .master__links {
     display: flex;
     justify-content: space-between;
-    
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
 }
 
 .master__links__title {
@@ -67,7 +69,8 @@ body {
 }
 
 .master__links__button {
-    background-color: #22D4FD;
+    display: inline-flex;
+    background-color: #000000;
     width: 280px;
     padding: 21.5px 0;
     text-align: center;
@@ -75,7 +78,29 @@ body {
     text-decoration: none;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
-    color: #000000;
+    color: #F6F6F6;
+    border: 5px solid #22D4FD;
+    justify-content: center;
+    align-items: center;
+}
+
+.github::before {
+    content: url(Logo\ Github.svg);
+    margin-right: 16px;
+}
+
+.linkedin::before {
+    content: url(Logo\ linkedin.svg);
+    margin-right: 16px;
+}
+
+.twitch::before {
+    content: url(Logo\ Twitch.svg);
+    margin-right: 16px;
+}
+
+.master__content__img {
+    margin-bottom: 170px;
 }
 
 footer {
