--- a/style.css
+++ b/style.css
@@ -59,10 +59,10 @@ body {
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 32px;
 }
 
-.master__links__title {
+.master__links__subtitle {
     font-family: 'Krona One', sans-serif;
     font-size: 24px;
     font-weight: 400;
@@ -70,18 +70,18 @@ body {
 
 .master__links__button {
     display: inline-flex;
-    background-color: #000000;
-    width: 280px;
-    padding: 21.5px 0;
-    text-align: center;
-    border-radius: 16px;
-    text-decoration: none;
+    align-items: center;
+    justify-content: center;
+    color: #F6F6F6;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
-    color: #F6F6F6;
-    border: 5px solid #22D4FD;
-    justify-content: center;
-    align-items: center;
+    font-size: 24px;
+    text-align: center;
+    text-decoration: none;
+    border: 2px solid #22D4FD;
+    border-radius: 8px;
+    width: 378px;
+    padding: 21.5px 0;
 }
 
 .github::before {
