--- a/style.css
+++ b/style.css
@@ -69,9 +69,10 @@ body {
 }
 
 .master__links__button {
-    display: inline-flex;
-    align-items: center;
+    display: flex;
+    gap: 16px;
     justify-content: center;
+    align-items: center;
     color: #F6F6F6;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
@@ -82,9 +83,16 @@ body {
     border-radius: 8px;
     width: 378px;
     padding: 21.5px 0;
+    transition: 0.1s all;
 }
 
-.github::before {
+.master__links__button:hover {
+    background-color: #272727;
+    transform: scale(1.013);
+
+}
+
+/* .github::before {
     content: url(Logo\ Github.svg);
     margin-right: 16px;
 }
@@ -97,10 +105,10 @@ body {
 .twitch::before {
     content: url(Logo\ Twitch.svg);
     margin-right: 16px;
-}
+} */
 
 .master__content__img {
-    margin-bottom: 170px;
+    margin-bottom: 13%;
 }
 
 footer {
