--- a/styles/style.css
+++ b/styles/style.css
@@ -47,10 +47,11 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 84px;
 }
 
 .master__content {
-    width: 615px;
+    width: 50%;
     display: flex;
     gap: 40px;
     flex-direction: column;
@@ -98,7 +99,7 @@ header {
     text-decoration: none;
     border: 2px solid var(--tertiary-color);
     border-radius: 8px;
-    width: 378px;
+    width: 50%;
     padding: 21.5px 0;
     transition: 0.1s all;
 }
@@ -125,7 +126,7 @@ header {
 } */
 
 .master__content__img {
-    margin-bottom: 13%;
+    width: 50%;
 }
 
 footer {
@@ -145,4 +146,20 @@ footer > p {
 
 .about__text {
     width: 574px;
+}
+
+@media (max-width: 1200px) {
+
+    header {
+        padding: 6% 6% 0;
+        margin: 0;
+    }
+
+    nav {
+        justify-content: center;
+    }
+    .master {
+        flex-direction: column-reverse;
+    }
+
 }
